# sales-flow-analyzer

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
helpers/: params_provider.py
models/: base_model.py
notebooks/: results.ipynb
stages/: base_stage.py
tests/: test_big_data_helper.py
