[tool.poetry]
name = "recsys_pet_project"
version = "0.1.0"
description = ""
authors = ["Anastasia Strueva <nastasy822@gmail.com>"]
readme = "README.md"
packages = [{include = "recsys_pet_project"}]

[tool.poetry.dependencies]
python = "^3.11"
catboost = "1.2.1"
pandas = "1.5.3"
joblib = "^1.3.2"
numpy = "1.26.4"
python-box = "^7.1.1"
ruamel-yaml = "^0.18.5"
scikit-learn = "^1.3.2"
pytest = "^7.4.3"
tqdm = "^4.67.1"
datasets = "^4.4.1"
jupyterlab = "^4.4.10"
plotly = "^6.4.0"
matplotlib = "^3.10.7"
implicit = {extras = ["cuda"], version = "^0.7.2"}
dvc = "^3.64.0"
polars = "^1.35.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
